# mypypackaging

./: .gitignore  README.md  setup.cfg  setup.sh
mypypackaging/: hello.py  test_hello.py
tests/: test_hello.py
