[metadata]
name = divepackaging
#version = attr: divepackaging.__version__
#url = https://github.com/...
#author = xxx xxxx
#author_email = hoge@hoge.hoge
#license = MIT
#description = divepackaging: Dive into python packaging
#long_description = file: README.md

[options]
#zip_safe = False
packages = find:
setup_requires =
    pytest-runner
test_requires =
    pytest

[options.entry_points]
#console_scripts =
#    divepackaging = divepackaging.hello:main

[aliases]
test=pytest
