[metadata]
name = mypypackaging
version = attr: mypypackaging.__version__
url = https://github.com/ryamashina/mypypackaging
author = Ryo Yamashina
author_email = ryamashinn@yahoo.co.jp
license = MIT
description = mypypackaging: Dive into python packaging
long_description = file: README.md

[options]
packages = find:
